part1/1_10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-kub-main-app-1-10-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app-1-10
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
