part1/1_10/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-kub-main-app-1-10
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: dev-kub-main-app-1-10-svc
          servicePort: 2345
